test/corpus/comments.txt
================================================================================
Single-line comment
================================================================================

// This does something

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Multi-line comment
================================================================================

// This does something
// And this does something else

--------------------------------------------------------------------------------

(source_file
  (comment)
  (comment))

================================================================================
Statement comment
================================================================================

/// This is a statement comment

--------------------------------------------------------------------------------

(source_file
  (statement_comment))

================================================================================
Module comment
================================================================================

//// This is a module comment

--------------------------------------------------------------------------------

(source_file
  (module_comment))

================================================================================
Mixed comments
================================================================================

// This is a comment
//// This is a module comment
/// This is a statement comment

--------------------------------------------------------------------------------

(source_file
  (comment)
  (module_comment)
  (statement_comment))

================================================================================
Comments at the end of line
================================================================================

use foo // this imports foo
use foo /// this really imports foo
use foo //// this is a module comment though

--------------------------------------------------------------------------------

(source_file
  (import (module))
  (comment)
  (import (module))
  (statement_comment)
  (import (module))
  (module_comment))
