test/corpus/constants.txt
================================================================================
Constant Int Base10 w/ Type
================================================================================

const name: Int = 100

--------------------------------------------------------------------------------

(source_file
  (constant (identifier)
   (type_definition (type_identifier))
   (constant_value (int (base10)))))

================================================================================
Constant Int Base10 w/o Type
================================================================================

const name = 100

--------------------------------------------------------------------------------

(source_file
  (constant (identifier)
   (constant_value (int (base10)))))

================================================================================
Constant Int Base16 w/ Type
================================================================================

const name: Int = 0xaa

--------------------------------------------------------------------------------

(source_file
  (constant (identifier)
   (type_definition (type_identifier))
   (constant_value (int (base16)))))

================================================================================
Constant Int Base16 w/o Type
================================================================================

const name = 0xaa

--------------------------------------------------------------------------------

(source_file
  (constant (identifier)
   (constant_value (int (base16)))))

================================================================================
Constant Int base10_underscore w/ Type
================================================================================

const name: Int = 1_000_000

--------------------------------------------------------------------------------

(source_file
  (constant (identifier)
   (type_definition (type_identifier))
   (constant_value (int (base10_underscore)))))

================================================================================
Constant Int base10_underscore w/o Type
================================================================================

const name = 1_000_000

--------------------------------------------------------------------------------

(source_file
  (constant (identifier)
   (constant_value (int (base10_underscore)))))

================================================================================
Constant String w/ Type
================================================================================

const name: String = @"ilikecardano"

--------------------------------------------------------------------------------

(source_file
  (constant (identifier)
   (type_definition (type_identifier))
   (constant_value (string (string_inner)))))

================================================================================
Constant String w/o Type
================================================================================

const name = @"ilikecardano"

--------------------------------------------------------------------------------

(source_file
  (constant (identifier)
   (constant_value (string (string_inner)))))

================================================================================
Constant Bytes w/ Type + #
================================================================================

const name: Bytes = #"deadbeef"

--------------------------------------------------------------------------------

(source_file
  (constant (identifier)
   (type_definition (type_identifier))
   (constant_value (bytes (string_inner)))))

================================================================================
Constant Bytes w/o Type + #
================================================================================

const name = #"deadbeef"

--------------------------------------------------------------------------------

(source_file
  (constant (identifier)
   (constant_value (bytes (string_inner)))))

================================================================================
Constant Bytes w/ Type
================================================================================

const name: Bytes = "deadbeef"

--------------------------------------------------------------------------------

(source_file
  (constant (identifier)
   (type_definition (type_identifier))
   (constant_value (bytes (string_inner)))))

================================================================================
Constant Bytes w/o Type
================================================================================

const name = "deadbeef"

--------------------------------------------------------------------------------

(source_file
  (constant (identifier)
   (constant_value (bytes (string_inner)))))

================================================================================
Constant Int base2
================================================================================

const name = 0b1010

--------------------------------------------------------------------------------

(source_file
  (constant (identifier)
   (constant_value (int (base2)))))

================================================================================
Constant Int base8
================================================================================

const name = 0o17

--------------------------------------------------------------------------------

(source_file
  (constant (identifier)
   (constant_value (int (base8)))))

================================================================================
Constant referencing another constant
================================================================================

const a = 42
const b = a

--------------------------------------------------------------------------------

(source_file
  (constant (identifier)
   (constant_value (int (base10))))
  (constant (identifier)
   (constant_value (identifier))))

================================================================================
Constant with constructor value
================================================================================

const x = Some(42)

--------------------------------------------------------------------------------

(source_file
  (constant (identifier)
   (constant_value
    (match_pattern
      (type_identifier)
      (match_pattern_argument
        (expression (int (base10))))))))

================================================================================
Constant with record constructor value
================================================================================

const x = Foo { bar: 1 }

--------------------------------------------------------------------------------

(source_file
  (constant (identifier)
   (constant_value
    (match_pattern_fields
      (type_identifier)
      (field_capture_element
        (identifier)
        (expression (int (base10))))))))
